css/edtalks-theme.css
/**
   ____                      ________  ______
  / __ \____  ___  ____     /  _/ __ \/ ____/
 / / / / __ \/ _ \/ __ \    / // / / / /     
/ /_/ / /_/ /  __/ / / /  _/ // /_/ / /___   
\____/ .___/\___/_/ /_/  /___/_____/\____/   
    /_/                                      

**/
/**
  Build and designed by the members of
  Open Instructional Design Co-Operative
  www.openidc.ca
**/

:root {
    --primary: #009688;
    --primary-dark: #1c7e74;
    --primary-darkest: #114a44;
    --primary-light: #3FD8C9;
    --primary-10: rgba(0, 150, 136, 0.1);

    --disabled: slategrey;
    
    --red: #bd4242;
    --red-dark: #842e2e;
    --red-light: #d17b7b;

    --grey-lightest: #f3f3f3;
    --grey-light: #fbfbfb;
    --grey-dark: #666;

    --border-lightest: #ebebeb;
    --border-light: #dcdcdc;
    --border-dark: #aaaaaa;
    --border-darkest: #232323;

    --shadow-low: 0 2px 5px rgba(0, 0, 0, 0.10);
    --shadow-mid: 0 5px 10px rgba(0, 0, 0, 0.15);
    --shadow-high: 0 5px 15px rgba(0, 0, 0, 0.20);
}

/**
** Typography
**/
body {
    font-size: 13px;
    margin-top: 0;
}
body.navbar-is-fixed-top {
    margin-top: 0;
}

.field--type-text-with-summary h2,
.field--type-text-long h2 {
    font-size: 1.6em;
    font-weight: bold;
}
.field--type-text-with-summary h3,
.field--type-text-long h3 {
    font-size: 1.3em;
    font-weight: bold;
}
.field--type-text-with-summary h4,
.field--type-text-long h4 {
    font-size: 1em;
    font-weight: bold;
}
.field--type-text-with-summary h5,
.field--type-text-long h5 {
    font-size: 1em;
    font-weight: bold;
    font-style: italic
}
.field--type-text-with-summary h6,
.field--type-text-long h6 {
    font-size: 0.8em;
    font-weight: bold;
}

@media (min-width: 768px) {
    body {
        font-size: 14px;
    }
}
@media (min-width: 2048px) {
    body {
        font-size: 16px;
    }
}

/**
** Buttons
**/
.btn {
    box-shadow: unset;
    font-size: inherit;
    font-weight: 500;
    text-transform: unset;
}
.btn-primary {
    background-color: var(--primary-light);
    color: black;
}
.btn-primary:hover,
.btn-primary:focus {
    background-color: var(--primary);
}
.btn-primary:active {
    background-color: var(--primary);
    background-image: radial-gradient(circle, var(--primary) 10%, var(--primary-dark) 11%);
    box-shadow: unset;
}
.btn-primary.disabled:hover,
.btn-primary[disabled]:hover,
fieldset[disabled] .btn-primary:hover,
.btn-primary.disabled:focus,
.btn-primary[disabled]:focus,
fieldset[disabled] .btn-primary:focus,
.btn-primary.disabled.focus,
.btn-primary[disabled].focus,
fieldset[disabled] .btn-primary.focus {
    background-color:var(--disabled);
}

.btn-success {
    background-color: var(--primary);
}
.btn-success:hover,
.btn-success:focus {
    background-color: var(--primary-light);
    color: black;
}
.btn-success:active {
    background-color: var(--primary-light);
    background-image: radial-gradient(circle, var(--primary-light) 10%, var(--primary-dark) 11%);
    box-shadow: unset;
    color: black;
}

.btn-danger {
    background-color: var(--red);
}
.btn-danger:hover,
.btn-danger:focus {
    background-color: var(--red-dark);
}
.btn-danger:active {
    background-color: var(--red-dark);
    background-image: radial-gradient(circle, var(--red-dark) 10%, var(--red-light) 11%);
    box-shadow: unset;
}

.btn.edit-node {
    line-height: 1.846;
    border-radius: unset;
}

button.copy-btn {
    color: var(--primary);
    background: unset;
    border: unset;
    font-size: 14px;
}
button.copy-btn:hover,
button.copy-btn:focus,
button.copy-btn:active {
    color: var(--primary-darkest);
}

a.soft-link {
    color: rgba(0,0,0,0.35);
}
a.soft-link:hover,
a.soft-link:focus {
    color: var(--primary);
    text-decoration: none;
}

a.btn.icon-left {
    line-height: unset;
}
a.btn.icon-left > i {
    margin-right: 10px;
}

a.icon-link {
    display: inline-flex;
    align-items: center;
    color: var(--primary-darkest);
}
a.icon-link:hover,
a.icon-link:focus {
    color: var(--primary);
    text-decoration: none;
    speak: none;
}

a.get-website-url::before {
    content: '\ef71';
    font-family: IcoFont!important;
    padding-right: 15px;
    font-size: 1.3em;
    font-weight: 100;
}

a.get-twitter-url::before {
    content: '\ed7a';
    font-family: IcoFont!important;
    padding-right: 15px;
    font-size: 1.3em;
    font-weight: 100;
}

a.node-action {
    font-size: 1em;
    color: var(--grey-dark);
    text-align: center;
    font-weight: 100;
    display: block;
}
a.node-action > i {
    margin-right: 5px;
}
a.node-action:hover,
a.node-action:focus {
    text-decoration: none;
    color: var(--primary);
}
@media (min-width: 768px) {
    a.node-action {
        font-size: 0.9em;
    }
    a.node-action > i {
        display: block;
        font-size: 2em;
        text-align: center;
        margin-right: 0;
    }
}

/** Flag Links **/
.flag {
    text-align: center;
}
.flag > a {
    font-size: 1em;
    color: var(--grey-dark);
    text-align: center;
    font-weight: 100;
    display: block;
    position: relative;
}
.flag > a > i {
    margin-right: 5px;
}
.flag a:hover,
.flag a:focus {
    text-decoration: none;
    color: var(--primary-dark);
}
.flag.action-unflag > a {
    color: var(--primary);
}
.flag.action-unflag > a:hover,
.flag.action-unflag > a:focus {
    color: var(--red);
}
.flag > a > span.ajax-throbber {
    position: absolute;
    top: 30px;
    left: -15px;
}
/** bookmark flag **/
.flag.action-unflag > a::after {
    content: 'ed';
}
@media (min-width: 768px) {
    .flag > a {
        font-size: 0.9em;
    }
    .flag > a > i {
        display: block;
        font-size: 2em;
        text-align: center;
        margin-right: 0px;
    }
}



/**
** Alert section
**/
.alert {
    position: fixed;
    bottom: 30px;
    right: 30px;
    border-radius: 10px;
    box-shadow: var(--shadow-high);
    margin: 0;
    z-index: 1;
}
.alert-danger {
    background-color: var(--red);
}


/**
** Site Header
**/
header.navbar {
    box-shadow: var(--shadow-mid);
    position: sticky;
    top: 0;
    margin: 0;
}
header.navbar > .container-fluid {
    display: grid;
    grid-template-columns: repeat(12, 1fr);
}
header.navbar > .container-fluid > .navbar-header {
    grid-column: 1 / -1;
}
header.navbar > .container-fluid > .navbar-collapse {
    grid-column: 1 / -1;
}
.navbar .logo > img {
    max-height: 32px;
}
header.navbar .navbar-nav > li > a {
    font-weight: 700;
    text-transform: uppercase;
    padding: 20.5px 25px;
    border-left: 1px solid var(--grey-lightest);
    letter-spacing: 1px;
}
header.navbar .navbar-nav > li > a:hover,
header.navbar .navbar-nav > li > a:focus,
header.navbar .navbar-nav > li > a:active {
    background-color: unset;
    color: var(--primary);
}
.navbar-default .navbar-nav > .active > a,
.navbar-default .navbar-nav > .active > a:hover,
.navbar-default .navbar-nav > .active > a:focus {
    background-color: unset;
    color: var(--primary);
}
#navbar-offcanvas {
    position: fixed;
    top: 0;
    left: -82%;
    width: 80%;
    background: white;
    height: 100vh;
    z-index: 1032;
    box-shadow: 3px 0 5px rgba(0,0,0,0.1);
}
#off-canvas-overlay {
    background-color: black;
    opacity: 0.25;
    width: 100%;
    height: 100%;
    overflow: hidden;
    position: fixed;
    top: 0;
    left: 0;
    z-index: 1031;
    display: none;
}

@media (min-width: 768px) {
    header.navbar > .container-fluid > .navbar-header {
        grid-column: 1 / 5;
    }
    header.navbar > .container-fluid > .navbar-collapse {
        grid-column: 5 / -1;
        justify-self: end;
    }
    #navbar-offcanvas,
    #off-canvas-overlay {
        display: none;
    }
}


/**
** Offcanvas Region
**/
#navbar-offcanvas .navbar-nav {
    margin: 0;
}
#navbar-offcanvas .navbar-nav li > a {
    color: var(--grey-dark);
    font-weight: bold;
    padding: 15px;
    line-height: 1em;
}
#navbar-offcanvas .navbar-nav > li > a:hover, 
#navbar-offcanvas .navbar-nav > li > a:focus {
    background-color: var(--grey-lightest);
}

/**
** Page Top Bar
**/
.top-bar {
    background: var(--grey-lightest);
    padding: 15px;
}
.region.region-top-bar {
    display: grid;
    grid-template-columns: auto auto;
    justify-content: stretch;
    grid-gap: 30px;
    max-width: 1240px;
    margin: auto;
}
.region-top-bar > h1.page-header {
    margin-top: 0;
    padding: 0;
    margin: 0;
    border: 0;
    font-size: 16px;
    font-weight: 700;
    align-self: center;
}
.region-top-bar > .views-exposed-form {
    align-self: center;
    grid-column: span 2;
}
#block-expandviewsexposedfiltersbutton {
    text-align: right;
}
#block-expandviewsexposedfiltersbutton button.viewsfilters-toggle {
    padding: 0 10px;
    background-color: unset;
}

@media (min-width: 768px) {
    .region.region-top-bar {
        justify-content: flex-start;
    }
    .region-top-bar > .views-exposed-form {
        grid-column: unset;
        display: block !important;
    }
}


/**
** Sidebar block layouts
**/
.region-sidebar-second  {
    background-color: var(--grey-light);
    padding: 15px;
    margin: 0 -15px;
}
.region-sidebar-second > .block {
    margin-bottom: 30px;
}
.region-sidebar-second h2.block-title {
    margin: 0 0 15px;
    font-weight: 600;
    color: var(--primary-darkest);
    text-transform: uppercase;
    margin-bottom: 15px;
    font-size: 1em;
    line-height: 1.846;
}
.region-sidebar-second h2.block-title:after {
    content: '';
    display: block;
    width: 30px;
    height: 2px;
    background-color: var(--primary-darkest);
}
@media (min-width: 768px) {
    .region-sidebar-second  {
        background-color: unset;
        padding: 0;
        margin: 0;
    }
}


/**
** Modal
**/
.modal-body > h5 {
    font-size: 0.8em;
    color: var(--border-dark);
    text-transform: uppercase;
    margin: 0 0 10px;
}
.modal-body > div.modal-element {
    margin-bottom: 30px;
    border: 1px solid var(--border-lightest);
    display: grid;
    grid-template-columns: auto 80px;
}
.modal-body > div.modal-element > textarea {
    border: 0;
    resize: none;
    padding: 13px 10px;
    height: 42px;
    vertical-align: middle;
    color: var(--text-mid);
    font-size: 11px;
    overflow: hidden;
    border-radius: unset;
}
.modal-body .node-share-buttons .btn {
    display: block;
    margin-bottom: 5px;
}
@media (min-width: 768px) {
    .modal-body > div.modal-element > textarea {
        font-size: 14px;
        padding: 10px;
    }
    .modal-body .node-share-buttons .btn {
        display: inline-block;
    }
}


/**
** Misc
**/
.is-readmore {
    overflow: hidden;
}

.panelled-region {
    padding: 30px;
    background-color: var(--grey-light);
}

body.user-logged-in .for-guest {
    display: none;
}
body:not(.user-logged-in) .for-member {
    display: none;
}

/**
** Utilities
**/
.mv-1 {
    margin-top: 1em;
    margin-bottom: 1em;
}
.mv-2 {
    margin-top: 2em;
    margin-bottom: 2em;
}
.mv-3 {
    margin-top: 3em;
    margin-bottom: 3em;
}

